2004-06-22  Per Bothner  <per@bothner.com>

	* Q2Read.java:  Remove BRL/KRL model of starting out quoted.
	(inLiteral):  Remove method.

	* Q2Read.java (nesting):  Moved field to Lexer.
	(skipIndentation, singleLine, readCommand):  New methods.
	(Q2ReaderParens):  New class.

2004-06-12  Per Bothner  <per@bothner.com>

	* Q2Read.java (readObject()):   Remove method - use inherited version.

2004-02-13  Per Bothner  <per@bothner.com>

	New package for a new experimental "q2" language.
	* Q2.java:  New class, extends Scheme.
	* Q2Apply.java:  New class, extends CpsProcedure.
	* Q2Read.java:  New class, extends LispReader.
	* Makefile.am:  New file.